--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ html {
   color: #000;
 }
 .container{
-    max-width: 1120px;
+    max-width: min(100% - 20px , 1120px);
     margin-inline: auto;
 }
 .header{
@@ -190,4 +190,10 @@ html {
     font-size: 0.8125rem;
     font-weight: 400;
     line-height: 164%;
+}
+
+@media ( max-width: 400px){
+    .nav-list{
+        gap: 20px;
+    }
 }
