--- a/css/style.css
+++ b/css/style.css
@@ -196,4 +196,10 @@ html {
     .nav-list{
         gap: 20px;
     }
+    .nav-list-item{
+        font-size: 0.5rem;
+    }
+    .header-title{
+        font-size: 2.5rem;
+    }
 }
